--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Yiisoft\\I18n\\": "src"
+            "Yiisoft\\I18n\\Message": "src"
         }
     },
     "autoload-dev": {
