--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "require": {
         "php": "^7.4|^8.0",
-        "yiisoft/i18n": "3.0.x-dev"
+        "yiisoft/translator": "3.0.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.3",
