--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,9 @@
         "yiisoft/translator": "3.0.x-dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.3",
-        "phan/phan": "^3.0"
+        "phpunit/phpunit": "^9.4",
+        "roave/infection-static-analysis-plugin": "^1.4",
+        "vimeo/psalm": "^4.1"
     },
     "autoload": {
         "psr-4": {
