--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "yiisoft/translator-message-php",
     "type": "library",
-    "description": "Yii PHP message storage",
+    "description": "Yii Translator PHP Message Storage",
     "keywords": [
         "i18n",
         "internationalization",
@@ -22,10 +22,10 @@
         "yiisoft/translator": "3.0.x-dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.4",
-        "roave/infection-static-analysis-plugin": "^1.5",
+        "phpunit/phpunit": "^9.5",
+        "roave/infection-static-analysis-plugin": "^1.7",
         "spatie/phpunit-watcher": "^1.23",
-        "vimeo/psalm": "^4.2"
+        "vimeo/psalm": "^4.7"
     },
     "autoload": {
         "psr-4": {
