--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "require": {
         "php": "^7.4|^8.0",
-        "yiisoft/translator": "3.0.x-dev"
+        "yiisoft/translator": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
@@ -51,8 +51,6 @@
     "config": {
         "sort-packages": true
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "scripts": {
         "test": "phpunit --testdox --no-interaction",
         "test-watch": "phpunit-watcher watch"
