--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "source": "https://github.com/yiisoft/translator-message-php"
     },
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.0",
         "yiisoft/translator": "^1.0"
     },
     "require-dev": {
