--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "require": {
         "php": "^8.0",
-        "yiisoft/translator": "^1.0|^2.0"
+        "yiisoft/translator": "^1.0|^2.0|^3.0"
     },
     "require-dev": {
         "maglnet/composer-require-checker": "^4.2",
